--- a/src/components/footer/footer.html
+++ b/src/components/footer/footer.html
@@ -3,26 +3,35 @@
   <div class="footer-content">
     <div class="footer-about">
       <h3>About Lux Farrier Service</h3>
-      <p>Lux Farrier Service is owned and operated by passionate horsemen & horsewomen commited to the health and success of your animals. With over a decade of combined experience working in the equine medical and podiatry field, we serve the farrier needs of all horses across the greater Montana area, from barefoot trims, to laminitus rehabilition.</p>
+      <p>
+        Lux Farrier Service is owned and operated by passionate horsemen &amp;
+        horsewomen committed to the health and success of your animals. With over a
+        decade of combined experience working in the equine medical and podiatry field,
+        we serve the farrier needs of all horses across the greater Montana area, from
+        barefoot trims to laminitus rehabilitation.
+      </p>
     </div>
-    <div class="footer-links">
-      <h3>Quick Links</h3>
-      <ul>
-        <li><a href="services.html">Services & Pricing</a></li>
-        <li><a href="scheduling.html">Schedule An Appointment</a></li>
-        <li><a href="#">Other LEN Network Services</a></li>
-      </ul>
-    </div>
-    <div class="footer-contact">
-      <h3>Contact Us</h3>
-      <p>Phone: (707) 740-3925</p>
-      <p>Email: luxfarrierservice@gmail.com</p>
-      <div class="social-media">
-        <a href="#"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-        <a href="#"><i class="fab fa-discord"></i></a>
+    
+    <!-- This extra content will be hidden on mobile -->
+    <div class="footer-extra">
+      <div class="footer-links">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><a href="services.html">Services &amp; Pricing</a></li>
+          <li><a href="scheduling.html">Schedule An Appointment</a></li>
+          <li><a href="#">Other LEN Network Services</a></li>
+        </ul>
       </div>
-    </div>
+      <div class="footer-contact">
+        <h3>Contact Us</h3>
+        <p>Phone: (707) 740-3925</p>
+        <p>Email: luxfarrierservice@gmail.com</p>
+        <div class="social-media">
+          <a href="#"><i class="fab fa-tiktok"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+          <a href="#"><i class="fab fa-discord"></i></a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer-bottom">
