--- a/src/pages/scheduling/css/scheduling.css
+++ b/src/pages/scheduling/css/scheduling.css
@@ -62,6 +62,7 @@
   color: #fff;
 }
 
+.form-group input:not([type]),
 .form-group input[type="text"],
 .form-group input[type="email"],
 .form-group input[type="tel"],
