--- a/src/pages/services/css/services.css
+++ b/src/pages/services/css/services.css
@@ -237,6 +237,10 @@ font-size: 1.5rem;
   margin-bottom: 10px;
 }
 
+/* Hide mobile buttons by default */
+.services-mobile {
+  display: none;
+}
 
 /* For medium screens (tablets, below ~992px) */
 @media (max-width: 991.98px) {
