--- a/src/components/footer/css/footer.css
+++ b/src/components/footer/css/footer.css
@@ -15,6 +15,13 @@
   padding: 50px;
 }
 
+.footer-extra {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 50px;
+}
+
 .footer-bottom {
   text-align: center;
   padding: 20px;
@@ -28,7 +35,6 @@
 
 .footer-about p, .footer-contact p {
   font-size: 16px;
-  margin-bottom: 15px;
 }
 
 .footer-links ul {
@@ -81,6 +87,9 @@
     flex-direction: column;
     align-items: center;
     padding: 20px;
+  }
+  .footer-extra {
+    display: none;
   }
   .footer-about,
   .footer-links,
